--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
       subcommands: |
         python3 scripts/download_wasm.py
         npm install
+      kms-version: 4.2.0
 
   lint:
     needs: build
@@ -31,6 +32,51 @@ jobs:
     with:
       subcommands: |
         npm test
+      kms-version: 4.2.0
+      regression_files: |
+        ./node_modules/non_regression_vector.json
+        ./node_modules/sqlite.db
+
+  cloudproof_java:
+    needs: test
+    uses: Cosmian/reusable_workflows/.github/workflows/cloudproof_java_in_docker.yml@develop
+    with:
+      branch: develop
+      target: x86_64-unknown-linux-gnu
+      extension: so
+      destination: linux-x86-64
+      os: ubuntu-20.04
+      kms-version: 4.2.0
+      copy_fresh_build: false
+      copy_regression_files: |
+        cp ./cloudproof_js/non_regression_vector.json src/test/resources/cover_crypt/non_regression/js_non_regression_vector.json
+        cp ./cloudproof_js/sqlite.db                  src/test/resources/findex/non_regression/js_sqlite.db
+
+  cloudproof_python:
+    needs:
+      - test
+    uses: Cosmian/reusable_workflows/.github/workflows/cloudproof_python.yml@develop
+    with:
+      branch: develop
+      target: x86_64-unknown-linux-gnu
+      kms-version: 4.2.0
+      copy_fresh_build: false
+      copy_regression_files: |
+        cp ./cloudproof_js/non_regression_vector.json tests/data/cover_crypt/non_regression/js_non_regression_vector.json
+        cp ./cloudproof_js/sqlite.db                  tests/data/findex/non_regression/js_sqlite.db
+
+  cloudproof_flutter:
+    needs:
+      - test
+    uses: Cosmian/reusable_workflows/.github/workflows/cloudproof_flutter.yml@develop
+    with:
+      branch: develop
+      target: x86_64-unknown-linux-gnu
+      extension: so
+      copy_fresh_build: false
+      copy_regression_files: |
+        cp ./cloudproof_js/non_regression_vector.json test/resources/cover_crypt/non_regression/js_non_regression_vector.json
+        cp ./cloudproof_js/sqlite.db                  test/resources/findex/non_regression/js_sqlite.db
 
   example_vuejs:
     needs: build_in_docker
@@ -44,6 +90,7 @@ jobs:
         sleep 5
         cd ../test
         node chrome.mjs http://localhost:8090 http://kms:9998
+      kms-version: 4.2.0
 
   example_reactjs:
     needs: build_in_docker
@@ -57,6 +104,7 @@ jobs:
         sleep 5
         cd ../test
         node chrome.mjs http://localhost:8090 http://kms:9998
+      kms-version: 4.2.0
 
   example_webpack:
     needs: build
@@ -75,6 +123,7 @@ jobs:
         cd examples/nodejs
         npm install
         node test.mjs 10
+      kms-version: 4.2.0
 
   example_imdb:
     needs: build
@@ -99,7 +148,9 @@ jobs:
   publish-dry-run:
     needs:
       - lint
-      - test
+      - cloudproof_java
+      - cloudproof_flutter
+      - cloudproof_python
       - example_imdb
       - example_full_text_search
       - example_nodejs
