--- a/.github/workflows/js_in_docker.yml
+++ b/.github/workflows/js_in_docker.yml
@@ -7,6 +7,13 @@ on:
       subcommands:
         required: true
         type: string
+      kms-version:
+        required: true
+        type: string
+      regression_files:
+        required: false
+        type: string
+        default: ''
 
 jobs:
   js-in-docker:
@@ -15,7 +22,7 @@ jobs:
 
     services:
       kms:
-        image: cosmian/kms:4.2.0
+        image: cosmian/kms:${{ inputs.kms-version }}
         env:
           COSMIAN_SERVER_URL: http://localhost:9998
           KMS_PUBLIC_PATH: /tmp
@@ -51,3 +58,12 @@ jobs:
         env:
           REDIS_HOST: redis
           KMS_HOST: kms
+
+      - name: Upload non-regression test vectors
+        if: inputs.regression_files != ''
+        uses: actions/upload-artifact@v3
+        with:
+          name: cloudproof_js
+          path: ${{ inputs.regression_files }}
+          retention-days: 1
+          if-no-files-found: error
