--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       subcommands: |
         python3 scripts/download_wasm.py
         npm install
-      kms-version: 4.2.0
+      kms-version: 4.3.3
 
   lint:
     needs: build
@@ -32,7 +32,7 @@ jobs:
     with:
       subcommands: |
         npm test
-      kms-version: 4.2.0
+      kms-version: 4.3.3
       regression_files: |
         ./node_modules/non_regression_vector.json
         ./node_modules/sqlite.db
@@ -41,12 +41,12 @@ jobs:
     needs: test
     uses: Cosmian/reusable_workflows/.github/workflows/cloudproof_java_in_docker.yml@develop
     with:
-      branch: develop
+      branch: feature/cloudproof_rust
       target: x86_64-unknown-linux-gnu
       extension: so
       destination: linux-x86-64
       os: ubuntu-20.04
-      kms-version: 4.2.0
+      kms-version: 4.3.3
       copy_fresh_build: false
       copy_regression_files: |
         cp ./cloudproof_js/non_regression_vector.json src/test/resources/cover_crypt/non_regression/js_non_regression_vector.json
@@ -57,9 +57,9 @@ jobs:
       - test
     uses: Cosmian/reusable_workflows/.github/workflows/cloudproof_python.yml@develop
     with:
-      branch: develop
+      branch: feature/cloudproof_rust
       target: x86_64-unknown-linux-gnu
-      kms-version: 4.2.0
+      kms-version: 4.3.3
       copy_fresh_build: false
       copy_regression_files: |
         cp ./cloudproof_js/non_regression_vector.json tests/data/cover_crypt/non_regression/js_non_regression_vector.json
@@ -70,7 +70,7 @@ jobs:
       - test
     uses: Cosmian/reusable_workflows/.github/workflows/cloudproof_flutter.yml@develop
     with:
-      branch: develop
+      branch: feature/cloudproof_rust
       target: x86_64-unknown-linux-gnu
       extension: so
       copy_fresh_build: false
@@ -90,7 +90,7 @@ jobs:
         sleep 5
         cd ../test
         node chrome.mjs http://localhost:8090 http://kms:9998
-      kms-version: 4.2.0
+      kms-version: 4.3.3
 
   example_reactjs:
     needs: build_in_docker
@@ -104,7 +104,7 @@ jobs:
         sleep 5
         cd ../test
         node chrome.mjs http://localhost:8090 http://kms:9998
-      kms-version: 4.2.0
+      kms-version: 4.3.3
 
   example_webpack:
     needs: build
@@ -123,7 +123,7 @@ jobs:
         cd examples/nodejs
         npm install
         node test.mjs 10
-      kms-version: 4.2.0
+      kms-version: 4.3.3
 
   example_imdb:
     needs: build
