--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       subcommands: |
         python3 scripts/download_wasm.py
         npm install
-      kms-version: 4.2.0
+      kms-version: 4.3.3
 
   lint:
     needs: build
@@ -32,7 +32,7 @@ jobs:
     with:
       subcommands: |
         npm test
-      kms-version: 4.2.0
+      kms-version: 4.3.3
       regression_files: |
         ./node_modules/non_regression_vector.json
         ./node_modules/sqlite.db
@@ -46,7 +46,7 @@ jobs:
       extension: so
       destination: linux-x86-64
       os: ubuntu-20.04
-      kms-version: 4.2.0
+      kms-version: 4.3.3
       copy_fresh_build: false
       copy_regression_files: |
         cp ./cloudproof_js/non_regression_vector.json src/test/resources/cover_crypt/non_regression/js_non_regression_vector.json
@@ -59,7 +59,7 @@ jobs:
     with:
       branch: develop
       target: x86_64-unknown-linux-gnu
-      kms-version: 4.2.0
+      kms-version: 4.3.3
       copy_fresh_build: false
       copy_regression_files: |
         cp ./cloudproof_js/non_regression_vector.json tests/data/cover_crypt/non_regression/js_non_regression_vector.json
@@ -90,7 +90,7 @@ jobs:
         sleep 5
         cd ../test
         node chrome.mjs http://localhost:8090 http://kms:9998
-      kms-version: 4.2.0
+      kms-version: 4.3.3
 
   example_reactjs:
     needs: build_in_docker
@@ -104,7 +104,7 @@ jobs:
         sleep 5
         cd ../test
         node chrome.mjs http://localhost:8090 http://kms:9998
-      kms-version: 4.2.0
+      kms-version: 4.3.3
 
   example_webpack:
     needs: build
@@ -123,7 +123,7 @@ jobs:
         cd examples/nodejs
         npm install
         node test.mjs 10
-      kms-version: 4.2.0
+      kms-version: 4.3.3
 
   example_imdb:
     needs: build
@@ -168,7 +168,7 @@ jobs:
     needs:
       - publish-dry-run
     uses: ./.github/workflows/js.yml
-    if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
+    if: startsWith(github.ref, 'refs/tags/')
     with:
       subcommands: |
         echo "//registry.npmjs.org/:_authToken=$NPM_ACCESS_TOKEN" > ~/.npmrc
@@ -183,7 +183,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Release
-        if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
+        if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v1
 
   cleanup:
