--- a/.github/workflows/js_in_docker.yml
+++ b/.github/workflows/js_in_docker.yml
@@ -25,7 +25,7 @@ jobs:
 
     services:
       kms:
-        image: cosmian/kms:${{ inputs.kms-version }}
+        image: ghcr.io/cosmian/kms:${{ inputs.kms-version }}
         env:
           COSMIAN_SERVER_URL: http://localhost:9998
           KMS_PUBLIC_PATH: /tmp
