--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ version: '3'
 services:
   kms:
     container_name: kms
-    image: cosmian/kms:4.3.3
+    image: ghcr.io/cosmian/kms:4.4.2
     environment:
       - KMS_HOSTNAME=0.0.0.0
       - KMS_PUBLIC_PATH=/tmp
