--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       subcommands: |
         python3 scripts/download_wasm.py
         npm install
-      kms-version: 4.4.3
+      kms-version: add_jwe_encryption
       findex-cloud-version: 0.1.0
 
   lint:
@@ -33,7 +33,7 @@ jobs:
     with:
       subcommands: |
         npm test
-      kms-version: 4.4.3
+      kms-version: add_jwe_encryption
       findex-cloud-version: 0.1.0
       regression_files: |
         ./node_modules/non_regression_vector.json
@@ -48,7 +48,7 @@ jobs:
       extension: so
       destination: linux-x86-64
       os: ubuntu-20.04
-      kms-version: 4.4.3
+      kms-version: add_jwe_encryption
       findex-cloud-version: 0.1.0
       copy_fresh_build: false
       copy_regression_files: |
@@ -62,7 +62,7 @@ jobs:
     with:
       branch: v4.0.2
       target: x86_64-unknown-linux-gnu
-      kms-version: 4.4.3
+      kms-version: add_jwe_encryption
       copy_fresh_build: false
       copy_regression_files: |
         cp ./cloudproof_js/non_regression_vector.json tests/data/cover_crypt/non_regression/js_non_regression_vector.json
@@ -93,7 +93,7 @@ jobs:
         sleep 5
         cd ../test
         node chrome.mjs http://localhost:8090 http://kms:9998
-      kms-version: 4.4.3
+      kms-version: add_jwe_encryption
       findex-cloud-version: 0.1.0
 
   example_reactjs:
@@ -108,7 +108,7 @@ jobs:
         sleep 5
         cd ../test
         node chrome.mjs http://localhost:8090 http://kms:9998
-      kms-version: 4.4.3
+      kms-version: add_jwe_encryption
       findex-cloud-version: 0.1.0
 
   example_browser:
@@ -121,7 +121,7 @@ jobs:
         python3 -m http.server &
         sleep 3
         node test.mjs
-      kms-version: 4.4.3
+      kms-version: add_jwe_encryption
       findex-cloud-version: 0.1.0
 
   example_webpack:
@@ -141,7 +141,7 @@ jobs:
         cd examples/nodejs
         npm install
         node test.mjs 10
-      kms-version: 4.4.3
+      kms-version: add_jwe_encryption
       findex-cloud-version: 0.1.0
 
   example_imdb:
