--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "base64-js": "^1.5.1",
     "better-sqlite3": "^8.0.1",
+    "cloudproof_js": "^9.1.0",
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0"
   },
