--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       subcommands: |
         python3 scripts/download_wasm.py
         npm install
-      kms-version: develop
+      kms-version: optional_attributes_objecttype
       findex-cloud-version: 0.1.0
 
   lint:
@@ -33,7 +33,7 @@ jobs:
     with:
       subcommands: |
         npm test
-      kms-version: develop
+      kms-version: optional_attributes_objecttype
       kms-jwe-key: '{"kty": "OKP","d": "MPEVJwdRqGM_qhJOUb5hR0Xr9EvwMLZGnkf-eDj5fU8","use": "enc","crv": "X25519","kid": "DX3GC+Fx3etxfRJValQNbqaB0gs=","x": "gdF-1TtAjsFqNWr9nwhGUlFG38qrDUqYgcILgtYrpTY","alg": "ECDH-ES"}'
       findex-cloud-version: 0.1.0
       regression_files: |
@@ -49,7 +49,7 @@ jobs:
       extension: so
       destination: linux-x86-64
       os: ubuntu-20.04
-      kms-version: develop
+      kms-version: optional_attributes_objecttype
       findex-cloud-version: 0.1.0
       copy_fresh_build: false
       copy_regression_files: |
@@ -63,7 +63,7 @@ jobs:
     with:
       branch: v4.0.2
       target: x86_64-unknown-linux-gnu
-      kms-version: develop
+      kms-version: optional_attributes_objecttype
       copy_fresh_build: false
       copy_regression_files: |
         cp ./cloudproof_js/non_regression_vector.json tests/data/cover_crypt/non_regression/js_non_regression_vector.json
@@ -94,7 +94,7 @@ jobs:
         sleep 5
         cd ../test
         node chrome.mjs http://localhost:8090 http://kms:9998
-      kms-version: develop
+      kms-version: optional_attributes_objecttype
       findex-cloud-version: 0.1.0
 
   example_reactjs:
@@ -109,7 +109,7 @@ jobs:
         sleep 5
         cd ../test
         node chrome.mjs http://localhost:8090 http://kms:9998
-      kms-version: develop
+      kms-version: optional_attributes_objecttype
       findex-cloud-version: 0.1.0
 
   example_browser:
@@ -122,7 +122,7 @@ jobs:
         python3 -m http.server &
         sleep 3
         node test.mjs
-      kms-version: develop
+      kms-version: optional_attributes_objecttype
       findex-cloud-version: 0.1.0
 
   example_webpack:
@@ -142,7 +142,7 @@ jobs:
         cd examples/nodejs
         npm install
         node test.mjs 10
-      kms-version: develop
+      kms-version: optional_attributes_objecttype
       findex-cloud-version: 0.1.0
 
   example_imdb:
